fix #2873 Fix Windows startup error by adding --add-opens=java.base/java.io=ALL-UNNAMED to fess.in.bat